# quals-2022

./: CNAME  README.md  categories.json  challenges.html  challenges.json  index.html  notices.json  observations.json  receipts.json  redemptions.json  scoreboard.html  solutions.json  statdump.css  statdump.css.map  teams.html  teams.json  tickets.json  users.json
adamd/: README.md
adamd/challenge/: Dockerfile  bytesobject.c  chall.py  gen.py  opcode.py
bios/: alter-bios.py  compress_lzma.py  convert_bio_data.py  create-bios.sh  generate_aif.py  palette.py  parse-fonts.py  seabios-rel-1.16.0.patch  solve.py
challenges/: 1.html  13.html  15.html  16.html  17.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  3.html  5.html  6.html  7.html
constricted/: README.md
cryptochall/: README.md
discoteq/: README.md  docker-compose.yml  run.sh
hash-it/: Makefile  README.md
ncuts/: README.md  gen.py  md5.inc  verify.py
not-so-advanced/: Dockerfile  Makefile  README.md  post_it_notes.py  something-clever.elf
old-school/: FRMKEYGE.FRM  KEYGEN.MAK  mod-keygen-exe.py  validate.py
pretty-random-function/: .gitignore  Makefile  README.md  build.sh  buildasan.sh  ctfclient  docker-compose.yml  flag
router/: Makefile  README.md  docker-compose.yml
router/challenge/src/: CMakeLists.txt  client_http.hpp  client_https.hpp  crypto.hpp  flag_0.inc  gen.py  server.cpp  server_http.hpp
router/challenge/src/ttmath/: ttmathbig.h  ttmathparser.h  ttmathtypes.h
sameold/: Dockerfile  README.md  bruteforce.py  check.py
secrecy/: Makefile  aes.c  aes.h  alter_funcs.py  crc.c  crc.h  encrypt_binary.py  encrypted_funcs.c  encrypted_funcs.h  encryption.c  errors.c  firstdecodeoffset.h  generate-smt.py  keydata  lightning.py  lightning_exploit.py  secrecy.c  secrecy.h  solver.output  state_machine.c  verification.c
simple-service/: Makefile  README.md
smugglers-cove/: README.md  docker-compose.yml  run.sh
teams/: 1.html  10.html  1000.html  1001.html  1002.html  1003.html  1004.html  1005.html  1006.html  1007.html  1008.html  1009.html  1010.html  1011.html  1012.html  1013.html  1014.html  1015.html  1016.html  1017.html  1018.html  1019.html  1020.html  1021.html  1022.html  1023.html  1024.html  1025.html  1026.html  1027.html  1028.html  1029.html  1030.html  1031.html  1032.html  1033.html  1034.html  1035.html  1036.html  1037.html  (+1242 more)
teedium-wallet/: README.md
twisty/: lightning.py  twisty.py
(+134 files in other folders)
